# translation

./: Cargo.toml  DEPLOY.md  DESIGN.md  README.md  wrangler.toml
site/: _headers  app.js  index.html  styles.css  web2local.js
site/downloads/: ai-translate-0.1.0-x86_64-linux.tar.gz.sha256  ai-translate-0.1.1-x86_64-linux.tar.gz.sha256  install-remote.sh  install.sh
src/: capture.rs  config.rs  daemon.rs  kde_shortcuts.rs  main.rs  translate.rs  ui.rs
