[package]
name = "ai-translate"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ashpd = { version = "0.13.11", default-features = false, features = ["global_shortcuts", "tokio"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
eframe = { version = "0.34.3", default-features = false, features = ["glow", "wayland", "x11", "default_fonts"] }
egui = "0.34.3"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json", "socks-proxy"] }
urlencoding = "2.1.3"
zbus = { version = "5.16.0", default-features = false, features = ["tokio"] }
